# neuralnetwork

./: .gitignore  README.md  example_mnist.ipynb  genericdlmodel.py  nn_in_numpy.ipynb  pyproject.toml  simple_dl.py  testing_svd.ipynb
