[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-deep-learning-model"
version = "0.0.1"
dependencies = [
    "numpy",
    "matplotlib",
    "jupyterlab",
    "ipympl"
]
requires-python = ">=3.12"
authors = [ {name = "David Tweedle", email = "david.aig.tweedle@gmail.com"} ]
maintainers = [ {name = "David Tweedle", email = "david.aig.tweedle@gmail.com"} ]
description = "A generic model for deep learning using numpy"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["deep learning", "numpy", "mnist"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Private :: Do not upload",
]
